--- a/requirements.txt
+++ b/requirements.txt
@@ -1,40 +1,89 @@
 absl-py==2.2.2
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.16
+aiohttp-retry==2.9.1
+aiosignal==1.3.2
+amqp==5.3.1
 annotated-types==0.7.0
+antlr4-python3-runtime==4.9.3
 anyio==4.9.0
+appdirs==1.4.4
 appnope==0.1.4
 asttokens==3.0.0
 astunparse==1.6.3
+async-timeout==5.0.1
+asyncssh==2.20.0
+atpublic==5.1
 attrs==25.3.0
+billiard==4.2.1
 bleach==6.2.0
+cachetools==5.5.2
+celery==5.5.1
 certifi==2025.1.31
 cffi==1.17.1
 charset-normalizer==3.4.1
 click==8.1.8
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
+colorama==0.4.6
 comm==0.2.2
+configobj==5.0.9
 contourpy==1.3.1
+cryptography==43.0.3
 cycler==0.12.1
 debugpy==1.8.13
 decorator==5.2.1
+dictdiffer==0.9.0
+diskcache==5.6.3
+distro==1.9.0
+dpath==2.2.0
+dulwich==0.22.8
+dvc==3.59.1
+dvc-data==3.16.9
+dvc-gdrive==3.0.1
+dvc-http==2.32.0
+dvc-objects==5.1.0
+dvc-render==1.0.2
+dvc-studio-client==0.21.0
+dvc-task==0.40.2
+entrypoints==0.4
 etils==1.12.2
 exceptiongroup==1.2.2
 executing==2.2.0
 filelock==3.18.0
 flatbuffers==25.2.10
+flatten-dict==0.4.2
+flufl.lock==8.1.0
 fonttools==4.57.0
+frozenlist==1.5.0
 fsspec==2025.3.2
+funcy==2.0
 gast==0.6.0
+gitdb==4.0.12
+GitPython==3.1.44
+google-api-core==2.24.2
+google-api-python-client==2.167.0
+google-auth==2.39.0
+google-auth-httplib2==0.2.0
 google-pasta==0.2.0
+googleapis-common-protos==1.70.0
+grandalf==0.8
 grpcio==1.71.0
+gto==1.7.2
 h11==0.14.0
 h5py==3.13.0
 httpcore==1.0.8
+httplib2==0.22.0
 httpx==0.28.1
 httpx-sse==0.4.0
+hydra-core==1.3.2
 idna==3.10
 importlib_resources==6.5.2
 ipykernel==6.29.5
 ipython==8.35.0
 isodate==0.7.2
+iterative-telemetry==0.0.10
 jax==0.5.3
 jaxlib==0.5.3
 jedi==0.19.2
@@ -44,6 +93,7 @@ jupyter_client==8.6.3
 jupyter_core==5.7.2
 keras==3.9.2
 kiwisolver==1.4.8
+kombu==5.5.3
 libclang==18.1.1
 Markdown==3.8
 markdown-it-py==3.0.0
@@ -57,32 +107,45 @@ mediapipe==0.10.21
 ml_dtypes==0.5.1
 mlcroissant==1.0.16
 mpmath==1.3.0
+multidict==6.4.3
 namex==0.0.8
 nest-asyncio==1.6.0
 networkx==3.4.2
 numpy==1.26.4
+oauth2client==4.1.3
+omegaconf==2.3.0
 opencv-contrib-python==4.11.0.86
 opencv-python==4.11.0.86
 opt_einsum==3.4.0
 optree==0.15.0
+orjson==3.10.16
 packaging==24.2
 pandas==2.2.3
 pandas-stubs==2.2.3.250308
 parso==0.8.4
+pathspec==0.12.1
 pexpect==4.9.0
 pillow==11.1.0
 platformdirs==4.3.7
 ply==3.11
 prompt_toolkit==3.0.50
+propcache==0.3.1
+proto-plus==1.26.1
 protobuf==4.25.6
 psutil==7.0.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
 pycparser==2.22
 pydantic==2.11.3
 pydantic-settings==2.8.1
 pydantic_core==2.33.1
+pydot==3.0.4
+PyDrive2==1.21.3
+pygit2==1.17.0
 Pygments==2.19.1
+pygtrie==2.5.0
 pyobjc==11.0
 pyobjc-core==11.0
 pyobjc-framework-Accessibility==11.0
@@ -240,30 +303,44 @@ pyobjc-framework-VideoToolbox==11.0
 pyobjc-framework-Virtualization==11.0
 pyobjc-framework-Vision==11.0
 pyobjc-framework-WebKit==11.0
+pyOpenSSL==24.2.1
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 python-slugify==8.0.4
 pyttsx3==2.98
 pytz==2025.2
+PyYAML==6.0.2
 pyzmq==26.4.0
 rdflib==7.1.4
 requests==2.32.3
 rich==14.0.0
+rsa==4.9.1
+ruamel.yaml==0.18.10
+ruamel.yaml.clib==0.2.12
 scipy==1.15.2
+scmrepo==3.3.10
+semver==3.0.4
 sentencepiece==0.2.0
+shellingham==1.5.4
+shortuuid==1.0.13
+shtab==1.7.2
 six==1.17.0
+smmap==5.0.2
 sniffio==1.3.1
 sounddevice==0.5.1
+sqltrie==0.11.2
 sse-starlette==2.2.1
 stack-data==0.6.3
 starlette==0.46.2
 sympy==1.13.1
+tabulate==0.9.0
 tensorboard==2.19.0
 tensorboard-data-server==0.7.2
 tensorflow-io-gcs-filesystem==0.37.1
 termcolor==3.0.1
 text-unidecode==1.3
+tomlkit==0.13.2
 torch==2.6.0
 torchaudio==2.6.0
 torchinfo==1.8.0
@@ -271,14 +348,20 @@ torchvision==0.21.0
 tornado==6.4.2
 tqdm==4.67.1
 traitlets==5.14.3
+typer==0.15.2
 types-pytz==2025.2.0.20250326
 typing-inspection==0.4.0
 typing_extensions==4.13.1
 tzdata==2025.2
+uritemplate==4.1.1
 urllib3==2.3.0
 uvicorn==0.34.1
+vine==5.1.0
+voluptuous==0.15.2
 wcwidth==0.2.13
 webencodings==0.5.1
 Werkzeug==3.1.3
 wrapt==1.17.2
+yarl==1.20.0
+zc.lockfile==3.0.post1
 zipp==3.21.0
